2006-02-20 Scott Dattalo <scott@dattalo.com>
	* src/symbol.cc: Symbol_Table::clear() crashes when the simulation
	engine is used as a stand alone library (Reported by David Saxtion).

2006-02-19 Borut Razem <borut.razem@siol.net>
	* regression/switch_test/switch_test.stc,
	  examples/modules/usart_gui/usart_gui.stc: removed .so extension
	  from "module library libgpsim_modules.so" so that it runs on WIN32
	  platform
	* src/modules.cc: made ModuleLibrary::MakeCanonicalName() a dummy
	  method on WIN32 platform. Is it really needed on *nix?
	* src/os_dependent.cc: introduced GPSIM_MODULE_PATH environment
	  variable on WIN32 platform  to define additional directories where
	  modules are searched. The search order for WIN32 is as follows:
	    1. The directory specified by library_name.
	    2. The current directory.
	    3. The system directory.
	    4. The 16-bit system directory.
	    5. The Windows directory.
	    6. The directory from which the application loaded
	      followed by directories listed in GPSIM_MODULE_PATH environment
	      variable followed by directories listed in PATH environment
	      variable.

2006-02-17 Scott Dattalo <scott@dattalo.com>
	* src/16bit-instructions.cc, src/16bit-instructions.h,
	src/16bit-hexdecode.cc: Fixed a few bugs with the newly added
	extended instructions.
	* src/16bit-processors.cc, src/16bit-processors.cc,
	src/16bit-registers.cc:
	added the pclatu register. 
	* src/pic-instructions.cc: the instruction class constructor now
	initializes most of it's data members directly.

	* regression/make.regression: .cod files are now removed for the
	'make clean rule'
	* regression/run_regression.sh, 
	regression/p18f/18f452.lkr, p18f/Makefile,
	p18f/extended_instructions.asm, p18f/instructions.asm,
	p18f/startup.stc:
	Regression test for the 18f extended instructions.

2006-02-16 Borut Razem <borut.razem@siol.net>
	* plat/win32/libgpsim.def: MSVC sync

2006-02-14 Scott Dattalo <scott@dattalo.com>